New QR Code Web Service

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ amd/package.json
 amd/package-lock.json
 amd/Gruntfile.js
 amd/node_modules
+.unison.thirdpartylibs.xml.efba32c0ea582294587e46ed74e92e7e.unison.tmp
