--- a/.github/workflows/erpnext.yml
+++ b/.github/workflows/erpnext.yml
@@ -6,47 +6,7 @@ on:
       - labeled
 
 jobs:
-  create-task:
-    runs-on: self-hosted-erpnext
-
-    steps:
-      - name: Format Payload
-        env:
-          ISSUE_TITLE: ${{ github.event.issue.title }}
-          ISSUE_BODY: ${{ github.event.issue.body }}
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
-          LABEL_NAME: ${{ github.event.label.name }}
-          ISSUE_URL: ${{ github.event.issue.html_url }}
-        run: |
-          # Use jq with environment variables to handle quotes and special characters
-          jq -n \
-            --arg title "$ISSUE_TITLE" \
-            --arg body "$ISSUE_BODY" \
-            --arg number "$ISSUE_NUMBER" \
-            --arg project "$LABEL_NAME" \
-            --arg url "$ISSUE_URL" \
-            '{
-              "subject": ("GH#" + $number + " - " + $title),
-              "project": $project,
-              "status": "Open",
-              "description": ("<p><a href=\"" + $url + "\">GH#" + $number + "</a></p><br>" + $body)
-            }' > payload.json
-
-          # Debug: Show the payload (you can remove this after testing)
-          echo "Generated payload:"
-          cat payload.json
-
-      - name: Make API Request to ERPNext
-        run: |
-          if curl --fail -X POST \
-            -H "Content-Type: application/json" \
-            -H "Authorization: ${{ secrets.WEBHOOK_TOKEN }}" \
-            -d @payload.json \
-            https://erp.wunderbyte.at/api/resource/Task; then
-            echo "Task created successfully"
-          else
-            echo "Failed to create task"
-            echo "Payload content:"
-            cat payload.json
-            exit 1
-          fi
+  call-labeled-issue-workflow:
+    uses: Wunderbyte-GmbH/catalyst-moodle-workflows/.github/workflows/labeled-issue.yml@main
+    secrets:
+      webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
